amdgpu / mesa 22.0.1 crashes Firefox Nightly (on Zoom Web calls?)
System information
Please post inxi -GSC -xx
output (fenced with triple backticks) OR fill information below manually
When not connected on the docking station:
System:
Host: portable-alex Kernel: 5.15.0-41-generic x86_64 bits: 64 compiler: gcc
v: 11.2.0 Desktop: GNOME 42.2 tk: GTK 3.24.33 wm: gnome-shell dm: GDM3
Distro: Ubuntu 22.04 LTS (Jammy Jellyfish)
CPU:
Info: 8-core model: AMD Ryzen 7 PRO 5850U with Radeon Graphics bits: 64
type: MT MCP arch: Zen 3 rev: 0 cache: L1: 512 KiB L2: 4 MiB L3: 16 MiB
Speed (MHz): avg: 1885 high: 2075 min/max: 400/4507 boost: enabled cores:
1: 1567 2: 1984 3: 2062 4: 2075 5: 1840 6: 1870 7: 1905 8: 1856 9: 1623
10: 1828 11: 1921 12: 1910 13: 1955 14: 2037 15: 1873 16: 1868
bogomips: 60683
Flags: avx avx2 ht lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm
Graphics:
Device-1: AMD Cezanne vendor: Lenovo driver: amdgpu v: kernel pcie:
speed: 8 GT/s lanes: 16 ports: active: eDP-1 empty: DP-1,DP-2,HDMI-A-1
bus-ID: 08:00.0 chip-ID: 1002:1638
Device-2: Chicony Integrated Camera type: USB driver: uvcvideo
bus-ID: 1-2:2 chip-ID: 04f2:b6d0
Display: wayland server: X.org v: 1.21.1.3 with: Xwayland v: 22.1.1
compositor: gnome-shell driver: X: loaded: amdgpu,ati
unloaded: fbdev,modesetting,radeon,vesa gpu: amdgpu display-ID: 0
Monitor-1: eDP-1 res: 3840x2160 dpi: 316 diag: 355mm (14")
OpenGL: renderer: AMD RENOIR (LLVM 13.0.1 DRM 3.42 5.15.0-41-generic)
v: 4.6 Mesa 22.0.1 direct render: Yes
When connected to the docking station (setup in which I reproduced the issue so far):
System:
Host: portable-alex Kernel: 5.15.0-41-generic x86_64 bits: 64 compiler: gcc
v: 11.2.0 Desktop: GNOME 42.2 tk: GTK 3.24.33 wm: gnome-shell dm: GDM3
Distro: Ubuntu 22.04 LTS (Jammy Jellyfish)
CPU:
Info: 8-core model: AMD Ryzen 7 PRO 5850U with Radeon Graphics bits: 64
type: MT MCP arch: Zen 3 rev: 0 cache: L1: 512 KiB L2: 4 MiB L3: 16 MiB
Speed (MHz): avg: 2485 high: 2623 min/max: 400/4507 boost: enabled cores:
1: 2495 2: 2484 3: 2571 4: 2623 5: 2466 6: 2564 7: 2454 8: 2460 9: 2454
10: 2182 11: 2484 12: 2481 13: 2512 14: 2488 15: 2468 16: 2578
bogomips: 60683
Flags: avx avx2 ht lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm
Graphics:
Device-1: AMD Cezanne vendor: Lenovo driver: amdgpu v: kernel pcie:
speed: 8 GT/s lanes: 16 ports: active: DP-6,DP-7 off: eDP-1
empty: DP-1, DP-2, DP-3, HDMI-A-1 bus-ID: 08:00.0 chip-ID: 1002:1638
Device-2: Chicony Integrated Camera type: USB driver: uvcvideo
bus-ID: 1-2:2 chip-ID: 04f2:b6d0
Display: wayland server: X.org v: 1.21.1.3 with: Xwayland v: 22.1.1
compositor: gnome-shell driver: X: loaded: amdgpu,ati
unloaded: fbdev,modesetting,radeon,vesa gpu: amdgpu display-ID: 0
Monitor-1: DP-6 model: AOC Q3279WG5B res: 2560x1440 dpi: 90
diag: 842mm (33.1")
Monitor-2: DP-7 model: AOC Q3279WG5B res: 2560x1440 dpi: 90
diag: 842mm (33.1")
OpenGL: renderer: AMD RENOIR (LLVM 13.0.1 DRM 3.42 5.15.0-41-generic)
v: 4.6 Mesa 22.0.1 direct render: Yes
Describe the issue
Firefox Nightly crashed:
- https://crash-stats.mozilla.org/report/index/1d1fa165-4999-4f18-8707-d39e10220705
- https://crash-stats.mozilla.org/report/index/0db4d9cb-2bf4-4c6e-8531-27b350220705
I cant give STR because I dont know exactly. I can state the browser was running fine for ~21h and it first crashed after 20min on a Zoom Web call. From there, I have been crashing quite a lot, six times during the remainder 10 minutes of the Zoom Web call.
I also got a nasty system freeze (I could not grab dmesg or anything) on running the inxi
command above, right when discovering Graphics part (the last visible line was the CPU extensions).