winsys/amdgpu: prevent NULL bo to be added to the buffers list

NULL bo shouldn't reach this function so:
- assert that bo are always non-NULL
- deal with NULL bo for builds without asserts

I'm not sure this is fixing a bug, but based on https://gitlab.freedesktop.org/mesa/mesa/-/issues/6796#note_1460842
Firefox is able to trigger lots of crashes in amdgpu_cs_flush around the calls
to amdgpu_inc_bo_num_active_ioctls.

The only possibility I see is a NULL-bo in one of the buffers list.
(the assert also checks that we can dereference the pointer, in case the bo
is not NULL but invalid)